feat(wip): derived stats
* create readme/home for docs
